changed html structure and added css

--- a/index.html
+++ b/index.html
@@ -15,49 +15,73 @@
     <title>Frontend Mentor | FAQ Accordion Card</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
       <h1 class="headline">FAQ</h1>
 
-      <p class="question">How many team members can I invite?</p>
-      <p class="answer">
-        You can invite up to 2 additional users on the Free plan. There is no
-        limit on team members for the Premium plan.
-      </p>
+      <button type="button" class="question">
+        How many team members can I invite?
+      </button>
+      <div class="answer">
+        <p>
+          You can invite up to 2 additional users on the Free plan. There is no
+          limit on team members for the Premium plan.
+        </p>
+      </div>
 
-      <p class="question">What is the maximum file upload size?</p>
-      <p class="answer">
-        No more than 2GB. All files in your account must fit your allotted
-        storage space.
-      </p>
+      <button type="button" class="question">
+        What is the maximum file upload size?
+      </button>
+      <div class="answer">
+        <p>
+          No more than 2GB. All files in your account must fit your allotted
+          storage space.
+        </p>
+      </div>
 
-      <p class="question">How do I reset my password?</p>
-      <p class="answer">
-        Click “Forgot password” from the login page or “Change password” from
-        your profile page. A reset link will be emailed to you.
-      </p>
+      <button type="button" class="question">
+        How do I reset my password?
+      </button>
+      <div class="answer">
+        <p>
+          Click “Forgot password” from the login page or “Change password” from
+          your profile page. A reset link will be emailed to you.
+        </p>
+      </div>
 
-      <p class="question">Can I cancel my subscription?</p>
-      <p class="answer">
-        Yes! Send us a message and we’ll process your request no questions
-        asked.
-      </p>
+      <button type="button" class="question">
+        Can I cancel my subscription?
+      </button>
+      <div class="answer">
+        <p>
+          Yes! Send us a message and we’ll process your request no questions
+          asked.
+        </p>
+      </div>
 
-      <p class="question">Do you provide additional support?</p>
-      <p class="answer">
-        Chat and email support is available 24/7. Phone lines are open during
-        normal business hours.
-      </p>
+      <button type="button" class="question">
+        Do you provide additional support?
+      </button>
+      <div class="answer">
+        <p>
+          Chat and email support is available 24/7. Phone lines are open during
+          normal business hours.
+        </p>
+      </div>
     </div>
 
     <div class="attribution">
       Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >
       . Coded by <a href="https://www.florian-lutz.de">Florian Lutz</a>.
     </div>
   </body>
