general functionality with js and some styling

--- a/index.html
+++ b/index.html
@@ -26,54 +26,88 @@
     <div class="container">
       <h1 class="headline">FAQ</h1>
 
-      <button type="button" class="question">
-        How many team members can I invite?
-      </button>
-      <div class="answer">
-        <p>
-          You can invite up to 2 additional users on the Free plan. There is no
-          limit on team members for the Premium plan.
-        </p>
+      <div class="faq">
+        <button type="button" class="question">
+          How many team members can I invite?
+          <img
+            class="arrow"
+            src="images/icon-arrow-down.svg"
+            alt="Pfeil nach unten"
+          />
+        </button>
+        <div class="answer">
+          <p>
+            You can invite up to 2 additional users on the Free plan. There is
+            no limit on team members for the Premium plan.
+          </p>
+        </div>
+      </div>
+      <div class="faq">
+        <button type="button" class="question">
+          What is the maximum file upload size?
+          <img
+            class="arrow"
+            src="images/icon-arrow-down.svg"
+            alt="Pfeil nach unten"
+          />
+        </button>
+        <div class="answer">
+          <p>
+            No more than 2GB. All files in your account must fit your allotted
+            storage space.
+          </p>
+        </div>
       </div>
 
-      <button type="button" class="question">
-        What is the maximum file upload size?
-      </button>
-      <div class="answer">
-        <p>
-          No more than 2GB. All files in your account must fit your allotted
-          storage space.
-        </p>
+      <div class="faq">
+        <button type="button" class="question">
+          How do I reset my password?
+          <img
+            class="arrow"
+            src="images/icon-arrow-down.svg"
+            alt="Pfeil nach unten"
+          />
+        </button>
+        <div class="answer">
+          <p>
+            Click “Forgot password” from the login page or “Change password”
+            from your profile page. A reset link will be emailed to you.
+          </p>
+        </div>
       </div>
 
-      <button type="button" class="question">
-        How do I reset my password?
-      </button>
-      <div class="answer">
-        <p>
-          Click “Forgot password” from the login page or “Change password” from
-          your profile page. A reset link will be emailed to you.
-        </p>
+      <div class="faq">
+        <button type="button" class="question">
+          Can I cancel my subscription?
+          <img
+            class="arrow"
+            src="images/icon-arrow-down.svg"
+            alt="Pfeil nach unten"
+          />
+        </button>
+        <div class="answer">
+          <p>
+            Yes! Send us a message and we’ll process your request no questions
+            asked.
+          </p>
+        </div>
       </div>
 
-      <button type="button" class="question">
-        Can I cancel my subscription?
-      </button>
-      <div class="answer">
-        <p>
-          Yes! Send us a message and we’ll process your request no questions
-          asked.
-        </p>
-      </div>
-
-      <button type="button" class="question">
-        Do you provide additional support?
-      </button>
-      <div class="answer">
-        <p>
-          Chat and email support is available 24/7. Phone lines are open during
-          normal business hours.
-        </p>
+      <div class="faq">
+        <button type="button" class="question">
+          Do you provide additional support?
+          <img
+            class="arrow"
+            src="images/icon-arrow-down.svg"
+            alt="Pfeil nach unten"
+          />
+        </button>
+        <div class="answer">
+          <p>
+            Chat and email support is available 24/7. Phone lines are open
+            during normal business hours.
+          </p>
+        </div>
       </div>
     </div>
 
@@ -84,5 +118,7 @@
       >
       . Coded by <a href="https://www.florian-lutz.de">Florian Lutz</a>.
     </div>
+
+    <script src="main.js"></script>
   </body>
 </html>
