altered structure and styling

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
   </head>
   <body>
     <div class="container">
+
+      <!-- 
+        TODO: Einfügen und überlappen der Images
+       -->
+
       <h1 class="headline">FAQ</h1>
 
       <div class="faq">
